src/main/java/com/example/projectboard/support/error/PostException.java
package com.example.projectboard.support.error;

public class PostException extends ApiException{
    public PostException(ErrorType errorType, Object data) {
        super(errorType, data);
    }
}
